# glmark2

./: .gitignore  .gitmodules  INSTALL  INSTALL.android  Makefile  NEWS  README  README.android  README.win32-nested  build.gradle  gradle.properties  i686-w64-mingw32.txt  local.properties  main.cpp  makefile  matrix.cpp  matrix.h  mesh.cpp  mesh.h  meson.build  meson_options.txt  model.cpp  oglsdl.h  readme  release  scene.cpp  scene.h  scenebuild.cpp  sceneshading.cpp  scenetexture.cpp  screen.cpp  screen.h  settings.gradle  shader.cpp  shader.h  texture.cpp  texture.h  waf  wscript  x86_64-w64-mingw32.txt
.github/workflows/: build.yml  ci-android.yml
android/: .gitignore  AndroidManifest.xml  build.gradle  build.sh
android/jni/: Android.mk  Android.ndk.mk  Application.mk
android/res/drawable/: ic_launcher_background.xml
android/res/layout/: activity_editor.xml  activity_main.xml  benchmark_item.xml
android/res/menu/: main_options_menu.xml
android/res/mipmap/: ic_launcher_round.xml
android/res/mipmap-anydpi-v26/: ic_launcher.xml
android/res/values/: strings.xml
android/res/xml/: preferences.xml
android/src/main/: AndroidManifest.xml
android/src/main/java/org/linaro/glmark2/: EditorActivity.java
android/src/main/jni/: Android.mk  Application.mk
android/src/main/res/drawable/: ic_launcher_foreground.xml
android/src/main/res/mipmap/: ic_launcher.xml
android/src/org/linaro/glmark2/: EditorActivity.java  GLVisualConfig.java  Glmark2Activity.java  Glmark2Native.java  Glmark2SurfaceView.java  MainActivity.java  MainPreferencesActivity.java  SceneInfo.java
data/: meson.build  wscript_build
data/shaders/: buffer-wireframe.frag  buffer-wireframe.vert  buffer.frag  buffer.vert  bump-height.frag  bump-height.vert  bump-normals-tangent.frag  bump-normals-tangent.vert  bump-normals.frag  bump-normals.vert  bump-poly.frag  conditionals-conditional.frag  conditionals-epilogue.frag  conditionals-epilogue.vert  conditionals-prologue.frag  conditionals-prologue.vert  conditionals-simple.vert  conditionals-step-conditional.frag  conditionals-step-conditional.vert  conditionals-step-simple.frag  conditionals.frag  desktop-blur-h.frag  desktop-blur-v.frag  desktop-blur.frag  desktop.frag  desktop.vert  effect-2d-convolution.frag  effect-2d.vert  function.frag  jellyfish.frag  jellyfish.vert  lamp-lit.frag  lamp-lit.vert  lamp-unlit.vert  light-advanced-jesse.frag  light-advanced-jesse.vert  light-advanced-normal-map.frag  light-advanced.frag  light-advanced.vert  light-basic-tex.frag  (+25 more)
doc/: glmark2-es2.1  glmark2.1  glmark2.1.in  meson.build  wscript_build
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 20100715  20100728  20110125  20110530  20110624  20110719  20110818  20110921  20111018  20111116  20111215  20120119  20120216  20120322  20120524  20120621  20120719  20120817  20121126  20121218  20140310  20170728  20200428  20210215  20211223  20230119
qnx_build/: Makefile  common.mk
qnx_build/nto/: Makefile
src/: Android.mk  android.cpp  benchmark-collection.cpp  benchmark-collection.h  benchmark.cpp  benchmark.h  canvas-android.cpp  canvas-android.h  canvas-drm.cpp  canvas-drm.h  canvas-generic.cpp  canvas-generic.h  canvas-sdl-gl.cpp  canvas-sdl-gl.h  canvas-sdl-glesv2.cpp  canvas-sdl-glesv2.h  canvas-sdl.cpp  canvas-sdl.h  canvas-x11-egl.cpp  canvas-x11-egl.h  canvas-x11-glx.cpp  canvas-x11-glx.h  canvas-x11.cpp  canvas-x11.h  canvas.h  default-benchmarks.h  egl-state.cpp  egl-state.h  gl-headers.cpp  gl-headers.h  gl-state-egl.cpp  gl-state-egl.h  gl-state-glx.cpp  gl-state-glx.h  gl-state-wgl.cpp  gl-state-wgl.h  gl-state.h  gl-visual-config.cpp  gl-visual-config.h  glx-disable-vsync.cpp  (+96 more)
src/glad/: README.md
src/glad/include/glad/: egl.h  gl.h  gles2.h  glx.h  wgl.h
src/glad/src/: egl.c  gl.c  gles2.c  glx.c  wgl.c
src/include/: getopt.h
src/libjpeg-turbo/: config.h  jccolor.c  jconfig.h  jdcolor.c  jdmerge.c  meson.build
src/libmatrix/: Makefile  log.cc  log.h  mat.h  matrix_inverse_test.cc  program.cc  program.h  shader-source.cc  util.cc  util.h  vec.h
src/libmatrix/test/: libmatrix_test.cc
src/libpng/: meson.build
src/scene-ideas/: a.cc  characters.h  d.cc  e.cc  i.cc  lamp.cc  lamp.h  light.h  logo.cc  logo.h  m.cc  n.cc  o.cc  s.cc  splines.cc  splines.h  t.cc  table.cc  table.h
src/scene-terrain/: base-renderer.cpp  blur-renderer.cpp  copy-renderer.cpp  luminance-renderer.cpp  normal-from-height-renderer.cpp  overlay-renderer.cpp  renderer-chain.cpp  renderer.h  simplex-noise-renderer.cpp  terrain-renderer.cpp  texture-renderer.cpp
src/sdlgles/: SDL_gles.c  SDL_gles.h  attribs.inc
src/zlib/: meson.build
waflib/: Build.py  ConfigSet.py  Configure.py  Context.py  Node.py  Runner.py  Scripting.py  Task.py  Utils.py  fixpy2.py
waflib/Tools/: c_config.py  c_preproc.py  compiler_d.py  cxx.py  fc.py  fc_config.py  javaw.py  msvc.py
waflib/extras/: compat15.py
