option('flavors', type : 'array',
       choices : [
           'drm-gl',
           'drm-glesv2',
           'wayland-gl',
           'wayland-glesv2',
           'x11-gl',
           'x11-glesv2'
        ],
        value : []
)

option('data-path', type : 'string', value : '')
option('extras-path', type : 'string', value : '')
option('version-suffix', type : 'string', value : '')
