install_subdir(
    'shaders',
    install_dir : join_paths([get_option('datadir'), 'glmark2'])
    )

install_subdir(
    'models',
    install_dir : join_paths([get_option('datadir'), 'glmark2'])
    )

install_subdir(
    'textures',
    install_dir : join_paths([get_option('datadir'), 'glmark2'])
    )
